--- a/project-cultivarium/index.html
+++ b/project-cultivarium/index.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cultivarium — Phaser + Vite (JS)</title>
     <style>
-      html, body, #game-container { height: 100%; margin: 0; background: #0f172a; }
-      #game-container { display: grid; place-items: center; }
-      .footer { position: fixed; inset-inline: 0; bottom: 8px; text-align: center; color: #94a3b8; font-family: ui-sans-serif, system-ui, sans-serif; font-size: 12px; }
+      html, body, #game-container {
+        margin: 0;
+        background: #0f172a;
+        overflow: hidden;
+      }
+      #game-container { position: relative; width: 100%; }
     </style>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="game-container"></div>
-    <div class="footer">Cultivarium — prototipo de diagrama (Parcelas, Cultivos, Clima, Plagas)</div>
+    <!--<div class="footer">Cultivarium — prototipo de diagrama (Parcelas, Cultivos, Clima, Plagas)</div>-->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
