--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         padding: 0;
         width: 100vw;
         overflow: hidden;
-        background: #0f172a;
+        background: #8ba772;
       }
       canvas { display:block; }
     </style>
